# rational

./: .gitignore  .gitmodules  CMakeLists.txt
include/: rational.hpp  rational.ipp
tests/: CMakeLists.txt  main.cpp
